# tgbot-example

./: .gitignore  README.md  ecosystem.config.js  main.py  pyproject.toml  settings.env.example
core/: settings.py
core/data/: __init__.py  links.py  messages.py  re_patterns.py
core/filters/: __init__.py
core/handlers/: __init__.py  start.py
core/keyboards/: default.py  inline.py
core/middlewares/: __init__.py  db.py  throttling.py
core/service/: loop_task.py
core/utils/: aio_dialogs_widgets.py  callback_data.py  commands.py  functions.py
core/utils/db_api/: create_database.py  database.py  repo.py
