[project]
name = "tgbot-example"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "aiogram (>=3.21.0,<4.0.0)",
    "uvloop (>=0.21.0,<0.22.0)",
    "environs (>=14.3.0,<15.0.0)",
    "pytz (>=2025.2,<2026.0)",
    "asyncmy (>=0.2.10,<0.3.0)",
    "redis (>=6.2.0,<7.0.0)",
    "cachetools (>=6.1.0,<7.0.0)",
    "apscheduler (>=3.11.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
